# speech-over

./: .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix
at-spi/: Cargo.toml  README.md
at-spi/src/: bus.rs  geometry.rs  lib.rs  object.rs  relation.rs  role.rs  state.rs
at-spi/src/interface/: accessible.rs  action.rs  application.rs  cache.rs  collection.rs  component.rs  deviceeventcontroller.rs  deviceeventlistener.rs  document.rs  editabletext.rs  event.rs  hyperlink.rs  hypertext.rs  image.rs  mod.rs  registry.rs  selection.rs  socket.rs  table.rs  tablecell.rs  text.rs  value.rs
src/: main.rs
