[package]
name = "at-spi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
async_static = "0.1.3"
futures-lite = "1.12.0"
once_cell = "1.10.0"
serde = "1.0.136"
zbus = "2.1.1"
zvariant = "3.1.2"
flagset = {version = "0.4.3", features = ["serde"]}

[features]
